assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html {
	font-size: 62.5%;
	box-sizing: border-box;
}

body {
	font-family: "Nunito", sans-serif;
	font-weight: 400;
	height: 100vh;
	color: #333;
	background-image: url("../images/golf-course.jpeg");
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	display: flex;
	align-items: center;
	justify-content: center;
	max-height: fit-content;
	overflow-x: hidden;
}

main {
	position: relative;
	width: 100rem;
	height: 65rem;
	background-color: rgba(255, 255, 255, 0.1);
	backdrop-filter: blur(200px);
	box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.25);
	border-radius: 9px;
	display: flex;
	justify-content: space-around;
	align-items: center;
	overflow-x: hidden;
}
/* Player boxes */
.player {
	flex: 1;
	padding: 2rem;
	margin: 2rem;
	display: flex;
	flex-direction: column;
	align-items: center;
	transition: all 0.75s;
	background-color: rgba(255, 255, 255, 0.8);
	border-radius: 5px;
	text-align: center;
	overflow: hidden; /* Prevent text from overflowing */
	max-height: fit-content;
}
/* Player names */
.name {
	font-size: 4rem;
	text-transform: uppercase;
	letter-spacing: 1px;
	word-spacing: 2px;
	font-weight: 300;
	margin-bottom: 1rem;
	text-align: center;
}
.btn--roll,
.btn--auto {
	font-family: inherit;
	font-size: 2.2rem;
	padding: 1rem 4rem;
	margin-bottom: 5rem;
	margin-top: 2rem;
	cursor: pointer;
	background-color: #3eb606;
	color: beige;
	border: none;
	border-radius: 5px;
	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
	transition: all 0.2s;
}
.finish-buttons {
	display: flex;
	position: absolute;
	bottom: 2rem;
	left: 50%;
	transform: translateX(-50%);
	justify-content: center;
	gap: 10px; /* Add some space between buttons */
}
/* Finish buttons */
.btn--new,
.btn--end {
	font-family: inherit;
	font-size: 1.8rem;
	padding: 1rem 2rem;
	cursor: pointer;
	background-color: #d70303;
	border: none;
	color: beige;
	border-radius: 5px;
	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
	transition: all 0.2s;
}
/* When shoosing opponent in initial popup */
.btn--opponent {
	font-family: inherit;
	font-size: 1.3rem;
	padding: 1rem 2rem;
	cursor: pointer;
	background-color: #0369d7;
	border: none;
	color: beige;
	border-radius: 5px;
	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
	transition: all 0.2s;
}
/* 9 Hole Golf Course name */
.game-name {
	position: absolute;
	left: -30px;
	top: 80px;
	font-size: 4rem;
	font-family: "Comic Sans MS", cursive, sans-serif;
	margin-bottom: 1rem;
	color: #cf0221;
	font-weight: bold; /* Make the text bold */
	z-index: 10; /* Make sure it appears on top of the game score */
	transform: rotate(-25deg); /* Rotate the text by -25 degrees to make it vertical */
}
/* instructions while playing */
.instruction {
	font-size: 2.5rem;
	margin-bottom: 1rem;
	text-align: center;
	color: #555;
}
/* Player current game details */
.current-score,
.swings,
.total-score {
	font-size: 2rem;
	margin-bottom: 1rem;
	color: #4d7c0f;
}
/*  Hole number and par */
.hole-info {
	position: absolute;
	top: 4rem;
	left: 50%;
	padding: 0.5rem 3rem;
	width: auto;
	background-color: #05dafa;
	border-radius: 10px;
	transform: translateX(-50%);
	font-size: 5rem;
	font-weight: 900;
	color: #066891;
	z-index: 9;
}
/* Total Par for all holes played */
.total-par {
	position: absolute;
	bottom: 7.5rem;
	left: 50%;
	opacity: 0.9;
	transform: translateX(-50%);
	font-size: 3.5rem;
	font-weight: 700;
	color: #0365b5;
}

.dice {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	height: 10rem;
	width: 10rem;
	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
	border-radius: 15%;
	background-color: white;
	display: flex;
	justify-content: center;
	align-items: center;
	box-sizing: border-box;
	border: solid 3px #d9d9d9;
}

.player--active {
	background-color: rgba(255, 255, 255, 0.9);
	border: 2px solid #3eb606;
}

.player--active .name {
	font-weight: 700;
	color: #3eb606;
}

.player--winner {
	background-color: #2f2f2f;
	border: 2px solid #d70303;
}

.player--winner .name {
	font-weight: 700;
	color: #a5c956;
}
.instructions-popup {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.8);
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 100;
	max-width: 100%;
	max-height: 100%;
	overflow: hidden;
}

.instructions-content {
	background-color: white;
	padding: 20px;
	font-size: 1.4rem;
	line-height: 2.5rem;
	border-radius: 10px;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
	text-align: center;
	max-width: 80%;
	max-height: 80%; /* Adjust the maximum height to 80% */
	overflow: hidden;
}

#close-instructions {
	margin-top: 20px;
	background-color: #d70303;
	color: beige;
}

#close-instructions:hover {
	background-color: #ff1f1f;
}
.opponent-buttons {
	display: flex;
	justify-content: space-around;
	margin-top: 10px;
	gap: 10px;
}

.hidden {
	display: none;
}

/* Media Query for screens below 940px */
@media (max-width: 940px) {
	html {
		font-size: 50%;
		box-sizing: border-box;
	}
	main {
		height: 90%;
	}
	.player {
		height: 80%;
	}
	.game-name {
		font-size: 3rem;
		top: -7px;
		width: 230px;
		align-content: center;
		left: 50%;
		transform: translateX(-50%);
	}

	.hole-info {
		font-size: 2.5rem;
		padding: 0.5rem 2rem;

		margin-top: -5px;
	}
	.instructions-content {
		max-height: 120%;
	}
	.player {
		margin: 1rem 0;
	}
	.btn--roll,
	.btn--auto {
		margin-top: 0;
		margin-bottom: 1rem;
	}
	.final-data {
		margin-bottom: -150px;
	}
	.total-par {
		background-color: rgba(255, 255, 255, 0.922);
		opacity: 1;
		font-size: 3rem;
	}
}
/* Media Query for screens below 600px */
@media (max-width: 640px) {
	main {
		margin-top: 20rem;
		width: 95%;
		height: auto;
		flex-direction: column;
	}
	body {
		margin-top: 100px;
	}

	.game-name {
		font-size: 2.5rem;
		top: -50px;
		width: 250px;
		left: 50%;
		transform: translateX(-50%);
	}

	.hole-info {
		font-size: 2rem;
		padding: 0.5rem 2rem;
		margin-top: -50px;
	}

	.player {
		margin: 1rem 0;
	}

	.total-par {
		width: 220px;
	}

	.final-data {
		position: relative;
		opacity: 1;
		width: 350px;
		transform: none;
		margin-top: 12rem;
	}
}
/* Media Query for screens below 400px */
@media (max-width: 440px) {
	main {
		margin-top: -100px;
		margin-bottom: 0;
		backdrop-filter: blur(0px);
	}
	body {
		margin-top: 10px;
	}
	.game-name {
		font-size: 3rem;
		top: -60px;
		width: 230px;
	}
	.hole-info {
		font-size: 2.5rem;
		padding: 0.5rem 2rem;
		margin-top: -50px;
	}
	.instructions-popup {
		width: 100%;
	}
	.player {
		padding-bottom: 0;
	}
	.total-par {
		width: 150px;
	}
	.final-data {
		width: 550px;
	}
}

